# tolkein-fan-club-mock-ssg

./: .gitignore  build.sh  main.sh  pyproject.toml
dir_functions/: copy_static.py  generate_page.py
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: block_markdown_parser.py  extract_title.py  htmlnode.py  inline_markdown_parser.py  leafnode.py  main.py  markdown_parser.py  markdown_to_html_node.py  parentnode.py  test_block_markdown_parser.py  test_htmlnode.py  test_inline_markdown_parser.py  test_leafnode.py  test_markdown_parser.py  test_markdown_to_html_node.py  test_parentnode.py  test_textnode.py  test_textnode_to_html_node.py  textnode.py  textnode_to_html_node.py
src/tolkein_fan_club_mock_ssg/: __init__.py
