[project]
name = "tolkein-fan-club-mock-ssg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "enkaey", email = "nishantkamna@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true